fixing extra space in width in home section

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -29,6 +29,7 @@
             font-weight: 400;
             line-height: 1.75;
             color: #000000;
+            overflow-x: hidden;
         }
         
         p {
